Fix style of background picture to see if it works on mobile.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -243,9 +243,6 @@ footer {
 
 /* Mobile devices */
 @media (max-width: 767px) {
-	#brand-logo {
-		height: 60px;
-	}
 
 	.page-header {
 		text-align: center;
